Update timeline content

--- a/web/modules/custom/bobpol_timeline/templates/bobpol-timeline-block.html.twig
+++ b/web/modules/custom/bobpol_timeline/templates/bobpol-timeline-block.html.twig
@@ -14,130 +14,38 @@
         </div>
       </div>
       <div class="row passed">
-        <div class="col-sm-4 col-md-2"><p>31. januar</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Introduktion til Borgerservice og Biblioteker</h6>
-          <p>Intro til BoB på Kulturudvalgetsmøde.</p>
-        </div>
-      </div>
-      <div class="row passed">
-        <div class="col-sm-4 col-md-2"><p>16. marts</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Døgnseminar og besøg på Dokk1</h6>
-          <p>Kulturudvalget besøgte Dokk1 med introduktion til Borgerservice og Biblioteker.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>11. april</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Kulturudvalget</h6>
-          <p>Præsentation af forslag til overordnet procesplan for Kulturudvalgets inddragelse.
-            Herunder præsentation af ”det blanke papir”-metoden (til den 25. april)</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>25. april</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Kulturudvalget <span class="text-danger">(på råd- mandsmøde den 18/4)</span></h6>
-          <p>Drøftelse af temaer ud fra ”Det blanke papir”-metoden</p>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-sm-4 col-md-2"><p>3. maj</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Borgermøde kl. 19-21</h6>
-          <p>Skødstrup eller Åby Bibliotek - med deltagelse af rådmanden og Kulturudvalget</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>9. maj</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Borgermøde kl. 19-21</h6>
-          <p>Dokk1 i Store Sal - med deltagelse af rådmanden og Kulturudvalget</p>
+          <h6>Mad for din mening</h6>
+          <p>Borgermøde på Åby Bibliotek (ER AFHOLDT)</p>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-4 col-md-2"><p>15. maj</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Borgermøde kl. 19-21</h6>
-          <p>Åby eller Skødstrup Bibliotek - med deltagelse af rådmanden og Kulturudvalget</p>
+          <h6>Streetfood og leg med politik - for hele familien - kl. 17-19</h6>
+          <p>Borgermøde på Skødstrup Bibliotek - <a href="https://www.aakb.dk/arrangementer/tendenser-og-debat/streetfood-og-leg-med-politik-for-hele-familien">Læs mere her</a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 col-md-2"><p>30. maj</p></div>
+        <div class="col-sm-4 col-md-2"><p>22. maj</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Kulturvalget <span class="text-danger">(på rådmands- møde den 16/5)</span></h6>
-          <p>Orientering om status på nuværende Borgerservice og Biblioteker-politik.</p>
+          <h6>Spis og byg din egen politik - kl. 17.30-19.30</h6>
+          <p>Borgermøde på Dokk1 - <a href="https://bobpol.aarhus.dk/spis-og-byg-din-egen-politik">Læs mere her</a></p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 col-md-2"><p>2. kvartal</p></div>
+        <div class="col-sm-4 col-md-2"><p>maj-august</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Mikro inddragelse</h6>
-          <p>Der tænkes i en bredere og metodisk mere varieret inddragelsesform forskellige steder i Aarhus Kommune, således at vi når bredere ud end ved de nævnte borgermøder.</p>
+          <h6>Borgerinddragelse</h6>
+          <p>Forskellige borgerinddragelsesaktiviteter rundt om i Aarhus Kommune</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 col-md-2"><p>27. juni</p></div>
+        <div class="col-sm-4 col-md-2"><p>november</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Kulturudvalget</h6>
-          <p>Opsamling på borgerinddragelsesproces, og drøftelse af temaer.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>3. kvartal</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Skriveproces</h6>
-          {# <p>beskrivelse</p> #}
-        </div>
-      </div>
-      <div class="row text-danger">
-        <div class="col-sm-4 col-md-2"><p>Uge 40</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>MKBs chefgruppe på studietur</h6>
-          {# <p>beskrivelse</p> #}
-        </div>
-      </div>
-      <div class="row text-danger">
-        <div class="col-sm-4 col-md-2"><p>Uge 41</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Rådmandsmøde i Borger- service og Biblioteker</h6>
-          <p>Behandling af foreløbig udkast til ny politik.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>24. oktober</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Kulturudvalget</h6>
-          <p>Orientering om politik forud for 27. marts 2018 Side 2 af 4 høringsproces</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>November</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Offentlig høring</h6>
-          <p>3 uger i november</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>December</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Drøftelse og bearbejdning af høringssvar</h6>
-          {# <p>beskrivelse</p> #}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>December</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Revidering af politikudkast og udarbejdelse af udkast til byrådsindstilling</h6>
-          {# <p>beskrivelse</p> #}
-        </div>
-      </div>
-      <div class="row text-danger">
-        <div class="col-sm-4 col-md-2"><p>Uge 50/51</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Rådmandsmøde i Borgerservice og Biblioteker</h6>
-          <p>Revideret politikudkast og udkast til byrådsindstilling</p>
+          <h6>Høring</h6>
+          <p>Offentlig høring af udkast til politik for Borgerservice og Biblioteker</p>
         </div>
       </div>
       <div class="row">
@@ -146,45 +54,10 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-4 col-md-2"><p>Januar 2019</p></div>
+        <div class="col-sm-4 col-md-2"><p>1. kvartal</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>KUV orientering</h6>
-          <p>Politik + indstilling</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>Januar 2019</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Fremsendelse til Borgmesterens Afd.</h6>
-          {# <p>beskrivelse</p> #}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>Februar 2019</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Magistratsmøde</h6>
-          {# <p>beskrivelse</p> #}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>Marts 2019</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Byrådsmøde</h6>
-          <p>1. behandling</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>Marts 2019</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Kulturudvalgsmøde</h6>
-          <p>Politikken i evt. udvalgsbehandling</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4 col-md-2"><p>April</p></div>
-        <div class="col-sm-8 col-md-10">
-          <h6>Byrådsmøde</h6>
-          <p>Evt. 2. behandling</p>
+          <h6>Behandling</h6>
+          <p>Behandling af politikken i Aarhus Byråd</p>
         </div>
       </div>
     </div>
