Removed lorem ipsum text

--- a/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
@@ -34,7 +34,7 @@
         <div class="content__main ">
           {{ left }}
           {% if (user.field_valid.value == '1') %}
-            <p>{{ 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque mattis nunc id dictum. Maecenas volutpat nibh a turpis scelerisque suscipit. Donec felis nisi, facilisis vel iaculis ac, vehicula eget tortor. Duis tincidunt elit at consectetur maximus. Nunc malesuada, nisi eu blandit auctor, augue velit facilisis nulla, sit amet fringilla nulla urna at nulla. Ut interdum nibh magna, quis imperdiet purus placerat ac. Duis placerat mi nunc, vel vestibulum risus convallis vitae. Vivamus mi sem, tempor pulvinar dui vel, imperdiet molestie dolor.' }}</p>
+            <p>{{ 'User validated.' }}</p>
           {% else %}
             <div class="card mb-3 nemid-validation">
               <div class="card-body">
