--- a/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
@@ -34,7 +34,7 @@
         <div class="content__main ">
           {{ left }}
           {% if (user.field_valid.value == '1') %}
-            <p>{{ 'User validated.' }}</p>
+            <p>{{ 'User validated'|t }}</p>
           {% else %}
             <div class="card mb-3 nemid-validation">
               <div class="card-body">
