--- a/web/themes/bobpol/templates/form/bobpol-user-form.html.twig
+++ b/web/themes/bobpol/templates/form/bobpol-user-form.html.twig
@@ -19,6 +19,7 @@
 
       <h4>{{ 'Options'|t }}</h4>
       {% if(not form['#user_account'].field_valid['0'].value == 1) %}
+        {% include '@bobpol_user/nemid-disclosure-text-da.html.twig' %}
         <p><a href="{{ path('bobpol_user_validate.saml.login', { ref :  path('<current>') }) }}">{{ 'Validate account'|t }}</a></p>
       {% endif %}
       <p><a href="/user/{{ form['#user_account'].id }}">{{ 'Show profile'|t }}</a></p>
