--- a/web/modules/custom/bobpol_user/templates/nemid-disclosure-text-da.html.twig
+++ b/web/modules/custom/bobpol_user/templates/nemid-disclosure-text-da.html.twig
@@ -1,5 +1,5 @@
 <strong>Oplysning om hvilke data der gemmes og til hvilket formål</strong>
-<textarea rows="8" style="width:100%">
+<textarea rows="8" style="width:100%" class="form-control mb-3">
 I forbindelse med din registrering som bruger på bobpol.aarhus.dk, skal vi jf. Databeskyttelsesforordningen informere dig om en række detaljer i vores håndtering af dine oplysninger og oplyse dig om dine rettigheder i den forbindelse.
 
 Vi behandler personoplysninger om dig i kategorierne navn og e-mail. Det gør vi for at kunne koble dine besvarelser sammen med din personlige data. Du vælger dog selv hvad du skriver i brugernavnet, som er det der synliggøres på hjemmesiden.
