--- a/web/modules/custom/bobpol_timeline/templates/bobpol-timeline-block.html.twig
+++ b/web/modules/custom/bobpol_timeline/templates/bobpol-timeline-block.html.twig
@@ -20,14 +20,14 @@
           <p>Borgermøde på Åby Bibliotek (ER AFHOLDT)</p>
         </div>
       </div>
-      <div class="row">
+      <div class="row passed">
         <div class="col-sm-4 col-md-2"><p>15. maj</p></div>
         <div class="col-sm-8 col-md-10">
           <h6>Streetfood og leg med politik - for hele familien - kl. 17-19</h6>
           <p>Borgermøde på Skødstrup Bibliotek - <a href="https://www.aakb.dk/arrangementer/tendenser-og-debat/streetfood-og-leg-med-politik-for-hele-familien">Læs mere her</a></p>
         </div>
       </div>
-      <div class="row">
+      <div class="row passed">
         <div class="col-sm-4 col-md-2"><p>22. maj</p></div>
         <div class="col-sm-8 col-md-10">
           <h6>Spis og byg din egen politik - kl. 17.30-19.30</h6>
