SALG-418: Update timeline content

--- a/web/modules/custom/bobpol_timeline/templates/bobpol-timeline-block.html.twig
+++ b/web/modules/custom/bobpol_timeline/templates/bobpol-timeline-block.html.twig
@@ -13,24 +13,24 @@
           <h6>2018</h6>
         </div>
       </div>
-      <div class="row passed">
+      <div class="row">
         <div class="col-sm-4 col-md-2"><p>3. maj</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Mad for din mening</h6>
-          <p>Borgermøde på Åby Bibliotek (ER AFHOLDT)</p>
+          <h6>Mad for din mening <span class="text-muted">(ER AFHOLDT)</span></h6>
+          <p>Borgermøde på Åby Bibliotek</p>
         </div>
       </div>
-      <div class="row passed">
+      <div class="row">
         <div class="col-sm-4 col-md-2"><p>15. maj</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Streetfood og leg med politik - for hele familien - kl. 17-19</h6>
+          <h6>Streetfood og leg med politik - for hele familien - kl. 17-19 <span class="text-muted">(ER AFHOLDT)</span></h6>
           <p>Borgermøde på Skødstrup Bibliotek - <a href="https://www.aakb.dk/arrangementer/tendenser-og-debat/streetfood-og-leg-med-politik-for-hele-familien">Læs mere her</a></p>
         </div>
       </div>
-      <div class="row passed">
+      <div class="row">
         <div class="col-sm-4 col-md-2"><p>22. maj</p></div>
         <div class="col-sm-8 col-md-10">
-          <h6>Spis og byg din egen politik - kl. 17.30-19.30</h6>
+          <h6>Spis og byg din egen politik - kl. 17.30-19.30 <span class="text-muted">(ER AFHOLDT)</span></h6>
           <p>Borgermøde på Dokk1 - <a href="https://bobpol.aarhus.dk/spis-og-byg-din-egen-politik">Læs mere her</a></p>
         </div>
       </div>
